--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
     "shadow-cljs": "^2.16.12",
     "tailwindcss": "^3.0.13"
   }
