--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
     "watch:css": "npx tailwind -i resources/tw/style.css -o resources/public/app.css -w"
   },
   "dependencies": {
-    "highlight.js": "11.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-highlight.js": "^1.0.7"
+    "highlight.js": "11.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
-    "shadow-cljs": "^2.17.0",
-    "tailwindcss": "^3.0.18"
+    "shadow-cljs": "^2.20.7",
+    "tailwindcss": "^3.2.1"
   }
 }
